# silent-receipts

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build.yml
scripts/: cli_demo.sh  demo.py  fetch_tx.sh  ots_everything.sh  ots_upgrade.sh
src/: main.rs
tests/: integration.rs
web/: index.html  serve.py  wallet.html
